# salinity_cli_rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: python.py
examples/csharp/: Program.cs
licenses/: GSW-rs.LICENSE
src/: error.rs  lib.rs  main.rs  models.rs
src/adapters/: cli.rs  ffi.rs  manual_ct.rs  mod.rs  teos10.rs  teos10_reduced.rs
src/chemistry/: mod.rs
src/salinity/: calculator.rs
tests/: cli_errors.rs  salinity_acceptance.rs
