[package]
name = "salinity_teos_10"
version = "0.1.0"
edition = "2024"

[dependencies]
gsw = "0.2.3"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
